# Guitar-Hero

./: README.md
Guitar Hero/: CMakeLists.txt
Guitar Hero/assets/songs/: Jojo.txt  Paint_It_Black.txt
Guitar Hero/include/: file_handler.h  game.h  note_manager.h
Guitar Hero/src/: file_handler.cpp  game.cpp  main.cpp  note_manager.cpp
